Changed class names for svgs because of instagram really to make naming consistent. Made change only to welcome page right now to make sure everything works. Added js so will work on mobile.

--- a/app/assets/styles/modules/_icons.css
+++ b/app/assets/styles/modules/_icons.css
@@ -1,21 +1,22 @@
 /* Styling Social Media Icons */
 svg {
-	transition: all 0.5s;
+	transition: all 0.5s ease;
 }
 
-svg:active {
+svg:hover, svg:active {
 	transform: scale(1.25);
 	transition: all 0.5s;
+	cursor: pointer;
 }
 
-.twitter:active {
+.twitter-svg:hover, .twitter-svg:active {
 	fill: $mainBrightRed;
 	transform: rotateX(30deg) rotateY(25deg) scale(1.5);
 }
 
-.pinterest:active,
-.facebook:active,
-.instagram:active {
+.pinterest-svg:hover, .pinterest-svg:active,
+.facebook-svg:hover, .facebook-svg:active,
+.instagrm-svg:hover, .instagrm-svg:active {
 	background: $mainBlack;
 	fill: $mainBrightRed;
 	border-radius: 50%;
